//// --------------------------------------------------
//// Enums
//// --------------------------------------------------

Enum "category_enum" {
  "Allievi",
  "Junior",
  "Senior"
}

Enum "competition_type_enum" {
  "Individuale",
  "Squadre"
}

Enum "apparatus_enum" {
  "FX",
  "PH",
  "SR",
  "VT",
  "PB",
  "HB"
}

Enum "execution_coefficient_enum" {
  "A+",
  "A",
  "B+",
  "B",
  "C+",
  "C"
}

Enum "macro_enum" {
  "Mixed",
  "Competition"
}

Enum "micro_enum" {
  "Increasing Load",
  "Decreasing Load",
  "Model",
  "Competition Week"
}

Enum "daily_routine_type_enum" {
  "I+",
  "I",
  "P",
  "C",
  "U",
  "Std",
  "G",
  "S",
  "B",
  "D"
}


//// --------------------------------------------------
//// Tables
//// --------------------------------------------------


Table societies {
  id uuid [pk, not null, default: 'gen_random_uuid()']
  name text [not null]
  city text [not null]
  region text [not null]
}

Table coaches {
  id uuid [pk, not null, default: 'gen_random_uuid()']
  supabase_id uuid [unique, ref: > auth.users.id]
  society_id uuid [ref: > societies.id]
  first_name varchar [not null]
  last_name varchar [not null]
  created_at timestamp [not null, default: 'now()']
  updated_at timestamp [not null, default: 'now()']
}

Table athletes {
  id uuid [pk, not null, default: 'gen_random_uuid()']
  supabase_id uuid [unique, ref: > auth.users.id]
  current_coach_id uuid [not null, ref: > coaches.id]
  registered_society_id uuid [ref: > societies.id]
  first_name varchar [not null]
  last_name varchar [not null]
  date_of_birth date [not null]
  registration_number int [not null, unique]
  category category_enum [not null]
  created_at timestamp [not null, default: 'now()']
  updated_at timestamp [not null, default: 'now()']
}

Table coaches_athletes {
  id uuid [pk, not null, default: 'gen_random_uuid()']
  coach_id uuid [not null, ref: > coaches.id]
  athlete_id uuid [not null, ref: > athletes.id]
  start_date date [not null]
  end_date date
}

Table competitions {
  id uuid [pk, not null, default: 'gen_random_uuid()']
  date date [not null]
  location text [not null]
  category text [not null]
}

Table athletes_competitions {
  id uuid [pk, not null, default: 'gen_random_uuid()']
  competition_id uuid [not null, ref: > competitions.id]
  athlete_id uuid [not null, ref: > athletes.id]
  apparatus_competed varchar[] [not null]
  type competition_type_enum [not null]
}

Table training_sessions {
  id uuid [pk, not null, default: 'gen_random_uuid()']
  week_number int [not null, note: '1-52']
  year int [not null, note: '2020-2100']
  date date [not null]
  session_number int [not null, note: '>=1']
  notes text
}

Table athlete_training_sessions {
  id uuid [pk, not null, default: 'gen_random_uuid()']
  athlete_id uuid [not null, ref: > athletes.id]
  training_session_id uuid [not null, ref: > training_sessions.id]
  Note: 'Relazione molti-a-molti tra atleti e sessioni di allenamento'
  indexes {
    (athlete_id, training_session_id) [unique]
  }
}

Table apparatus_sessions {
  id uuid [pk, not null, default: 'gen_random_uuid()']
  training_session_id uuid [not null, ref: > training_sessions.id]
  apparatus apparatus_enum [not null]
  base_volume int [not null, default: 0, note: '>=0']
  total_time int [not null, note: '>0']
  density numeric
  intensity_sets_count int [default: 0, note: '>=0']
  total_volume int
  average_intensity numeric [note: '>=0']
  max_intensity numeric [note: '>=0']
}

Table training_sets {
  id uuid [pk, not null, default: 'gen_random_uuid()']
  apparatus_session_id uuid [not null, ref: > apparatus_sessions.id]
  set_number int [not null, note: '>=1']
  volume_done int [not null, note: '>0']
  execution_coefficient execution_coefficient_enum
  execution_penalty numeric [note: '0-10']
  falls int [not null, default: 0, note: '>=0']
  elements_done_number int [not null, note: '>0']
  intensity numeric [note: '>=0']
}

Table apparatus_weekly_goals {
  id uuid [pk, not null, default: 'gen_random_uuid()']
  athlete_id uuid [not null, ref: > athletes.id]
  week_number int [not null, note: '1-52']
  year int [not null, note: '2020-2100']
  apparatus apparatus_enum [not null]
  macro macro_enum [not null]
  micro micro_enum [not null]
  camp text
  competition_id uuid [ref: > competitions.id]
  exercise_volume int [not null, note: '>0']
  dismount_volume int [not null, note: '>=0']
  target_penalty numeric [not null, note: '0-10']
  base_volume int [note: '>0']
}

Table daily_routines {
  id uuid [pk, not null, default: 'gen_random_uuid()']
  athlete_id uuid [not null, ref: > athletes.id]
  session_id uuid [not null, ref: > training_sessions.id]
  apparatus apparatus_enum [not null]
  type daily_routine_type_enum [not null]
  quantity int [not null, note: '>0']
  target_sets int [not null, note: '>0']
  target_execution execution_coefficient_enum [not null]
} 

Table weekly_goal_presets {
  id uuid [pk, not null, default: 'gen_random_uuid()']
  name text [not null]
  apparatus apparatus_enum [not null]
  macro macro_enum [not null]
  micro micro_enum [not null]
  exercise_volume int [not null]
  dismount_volume int
  target_penalty numeric [not null]
  base_volume int
  created_by uuid [ref: > coaches.id]
}

Table daily_routine_presets {
  id uuid [pk, not null, default: 'gen_random_uuid()']
  name text [not null]
  apparatus apparatus_enum [not null]
  type daily_routine_type_enum [not null]
  quantity int [not null]
  target_sets int [not null]
  target_execution execution_coefficient_enum [not null]
  created_by uuid [ref: > coaches.id]
}

//// A reference to Supabase's auth table
Table auth.users {
  id uuid [pk]
} 